<resources>
    <string name="app_name">ABCAutoValuers</string>
    <string name="login_text_statement">Login into your account</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="remember_me">Remember me</string>
    <string name="statement"><![CDATA[Fast, Reliable & Efficient]]></string>
    <string name="log_out">Log-out</string>
    <string name="new_valuation">Start new a valuation</string>
    <string name="plate_number">Plate Number</string>
    <string name="client_details">Client Details</string>
    <string name="kra_pin">KRA Pin</string>
    <string name="id">ID</string>
    <string name="instructions">Instructions</string>
    <string name="car_details">Car Details</string>
    <string name="add">Add</string>
    <string name="front">Front</string>
    <string name="front_left">Front Left</string>
    <string name="front_right">Front Right</string>
    <string name="rear_right">Rear Right</string>
    <string name="rear_left">Rear Left</string>
    <string name="millage">Millage</string>
    <string name="head_light">Head Light</string>
    <string name="dashboard">Dashboard</string>
    <string name="radio">Radio</string>
    <string name="insurance_photo">Insurance Photo</string>
    <string name="chassis">Chassis</string>
    <string name="submit">Submit</string>
    <string name="submitting_data">Submitting Data</string>
    <string name="take_time">This may take some time…</string>
    <string name="there_has_been_an_error_uploading_please_try_again">There has been an error uploading. Please try again!</string>
    <string name="ok">OK</string>
    <string name="error_message"> %1$s photo has not been set</string>
    <string name="error">ERROR</string>
    <string name="retake">Retake</string>
    <string name="confirm">Confirm</string>
    <string name="rear">Rear</string>
    <string name="valuation" />
    <string name="valuation_instance_present">Valuation Instance Present</string>
    <string name="valuation_note">There is a valuation that was not submitted. If you proceed  the previous valuation instance will be deleted.</string>
    <string name="back_pressed_note">There is a valuation that is not submitted. Would you like to save the valuation instance?</string>
    <string name="start_new">Start New</string>
    <string name="save">Save</string>
    <string name="don_t_save">Don\'t Save</string>
    <string name="server_client_id">569558796081-58p16nqvg72c5n7oemj5fuaonmokbc1a.apps.googleusercontent.com</string>
    <string name="success">Success</string>
    <string name="check_image">Check Image</string>
    <string name="images_were_successfully_uploaded">Images were successfully uploaded.</string>
    <string name="account_selected">Account selected:</string>
    <string name="sample_mail">no email is selected</string>
    <string name="click_to_change">Click to change</string>
    <string name="proper_account">Make sure that the proper account\'%1$s\' is selected</string>
    <string name="not_connected">Connection lost! Check your internet connection</string>
    <string name="connected">Your are now connected</string>
    <string name="logo">logo</string>
    <string name="proceed">Proceed with valuation</string>
    <string name="welcome">Welcome %1$s</string>
    <string name="valuate">Valuate</string>
    <string name="proceed_only">Proceed</string>
    <string name="username">Username</string>
    <string name="add_user">Add user</string>
    <string name="email">Email</string>
    <string name="is_admin">Is admin</string>
    <string name="register">Register</string>
    <string name="user_was_successfully_added">User was successfully added</string>
    <string name="user_upload_error_statement">There was an error uploading the user details. Please try again.</string>
    <string name="add_new_user">Add User</string>
    <string name="adding_user">Adding user</string>
    <string name="check_connection">There has been an error during processing. Please check your internet connection and try again.</string>
    <string name="item_view">Item View</string>
    <string name="compulsory">Fields marked * are compulsory</string>
    <string name="first_second">First Second</string>
    <string name="fetch_failed">There was a problem fetching data. Please click to retry</string>
    <string name="scheduled_valuations">Scheduled valuations</string>
    <string name="full_names">Full Names</string>
    <string name="phone_number">Phone Number</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="fetching_valuations">Fetching valuations</string>
    <string name="select_a_user">Select a user!</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="insurance_details">Insurance Details</string>
    <string name="insurer">Insurer</string>
    <string name="insurance_certificate_number">Insurance Certificate Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="policy_number">Policy Number</string>
    <string name="vehicle_make_and_model">Vehicle Make and Model</string>
    <string name="body_type">Body Type</string>
    <string name="color">Color</string>
    <string name="transmission">Transmission</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="engine_number">Engine Number</string>
    <string name="engine_capacity">Engine Capacity</string>
    <string name="engine_type">Engine Type</string>
    <string name="odometer_reading">Odometer Reading</string>
    <string name="car_state_details">Car State Details</string>
    <string name="tyres">Tyres</string>
    <string name="body_work">Body Work</string>
    <string name="mechanical">Mechanical</string>
    <string name="electrical">Electrical</string>
    <string name="extras">Extras</string>
    <string name="general_condition">General Condition</string>
    <string name="number_of_airbags">Number of Airbags</string>
    <string name="address">Address</string>
    <string name="anti_theft_devices">Anti-theft Devices</string>
    <string name="empty_error">Field cannot be empty</string>
    <string name="select_lights">Please select the type of lights</string>
    <string name="gear_box">Gear Box</string>
    <string name="problem">A problem was encountered. Click here to try again</string>
    <string name="completed_valuations">Completed Valuations</string>
    <string name="provided">Are the copy of the following documents provided? Check if provided</string>
    <string name="identification_card">Identification Card</string>
    <string name="kra">KRA Pin Certificate</string>
    <string name="insurance_certificate">Insurance Certificate</string>
    <string name="valuation_letter">Valuation Letter</string>
    <string name="log_book">Log Book</string>
    <string name="scheduled">Scheduled</string>
    <string name="delete_valuation">Delete Valuation?</string>
    <string name="delete_proceed">You are about to delete the valuation instance. do you still want to proceed</string>
    <string name="delete">delete</string>
    <string name="assigned_valuations">Assigned Valuations</string>
    <string name="allow_permission">Please allow permission to make phone call</string>
    <string name="town">Town</string>
    <string name="county">County</string>
    <string name="location">Location</string>
    <string name="location_not_provided">Location details were not provided</string>

</resources>