<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/ic_error" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_bold"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:text="@string/there_has_been_an_error_uploading_please_try_again"
        android:paddingEnd="30dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@color/colorWhite" />
</LinearLayout>