<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circular_background_added"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_check_24"
            android:contentDescription="@string/check_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:padding="10dp"
        android:text="@string/success"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorSuccess"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/message_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/user_was_successfully_added"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button_success"
        android:text="@string/ok"
        android:textColor="@color/colorWhite" />
</LinearLayout>