<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="7dp"
    android:background="@drawable/schedule_item_background">

    <TextView
        android:id="@+id/names"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:padding="5dp"
        android:textColor="@color/colorBlack"
        android:text="@string/first_second"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenterButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_italic"
        android:text="@string/location"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenterButtons"
        app:layout_constraintStart_toStartOf="@+id/names"
        app:layout_constraintTop_toBottomOf="@+id/names" />

    <TextView
        android:layout_width="0dp"
        android:id="@+id/plateNumber"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/colorBlack"
        android:text="@string/plate_number"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenterButtons"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>